--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /venv
-**/__pycache__
+__pycache__
 .env
 
 # Logs
@@ -17,7 +17,7 @@ dist-ssr
 *.local
 
 # Editor directories and files
-**/.vscode
+.vscode
 !.vscode/extensions.json
 .idea
 .DS_Store
